[gd_scene load_steps=2 format=3 uid="uid://c2mxq5b176qgs"]

[ext_resource type="Script" path="res://enemies/behaviors/variations/StaticInvestigate.gd" id="1_pc0a6"]

[node name="StaticInvestigate" type="Node"]
script = ExtResource("1_pc0a6")

[node name="WaitTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
